[package]
name = "agprefs"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A simple parser for the reading agprefs files from lightroom"
readme = "README.md"
repository = "https://github.com/aftershootco/agprefs"
homepage = "https://github.com/aftershootco/agprefs"

[dependencies]
cookie-factory = "0.3.2"
escape_string = "0.1.2"
indexmap = { version = "1.9.1", features = ["serde"] }
nom = "7"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1"

[features]
default = ["namedlist"]
namedlist = []
