[package]
name = "agprefs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A simple parser for the reading agprefs files from lightroom"
readme = "README.md"
repository = "https://github.com/aftershootco/agprefs"
homepage = "https://github.com/aftershootco/agprefs"

[dependencies]
cookie-factory = { version = "0.3.2", optional = true }
indexmap = { version = "1.9.1", features = ["serde"] }
memchr = "2.5.0"
nom = "7"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1"

[features]
default = ["namedlist", "composer"]
composer = ["dep:cookie-factory"]
namedlist = []
