[package]
name = "agprefs"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A simple parser and serializer for the reading and writing agprefs files and the text fields in lrcat files from lightroom"
readme = "README.md"
repository = "https://github.com/aftershootco/agprefs"
homepage = "https://github.com/aftershootco/agprefs"

[lib]
bench = false

[dependencies]
cookie-factory = { version = "0.3.2", optional = true }
memchr = { version = "2.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

indexmap = { version = "1.9.1", features = ["serde"] }
nom = "7"
thiserror = "1"
escape_string = "0.1.2"
nom-supreme = "0.8.0"

[features]
default = ["composer", "serde"]
composer = ["dep:cookie-factory", "dep:memchr"]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
criterion = "0.4"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "composing"
harness = false

[profile.release]
debug = true
