[package]
name = "agprefstojson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agprefs = { git = "https://github.com/aftershootco/agprefs", version = "0.1.4" }
anyhow = "1.0.63"
clap = { version = "3.2.20", features = ["derive"] }
serde = "1.0.144"
serde_json = "1.0.85"
